test/TestPhases/typechecker/invalid/assignArrayToSimple.blc
module

struct MyS
  var f1: int8
  var f2: bool
end

activity main ()()
  var s: MyS = {f2 = true}
  var t: int32
  await true
  t = {[0] = true}
end
